# hvcc_teensy

./: .gitlab-ci.yml  README.md  hvcc_teensy.py  pyproject.toml
hvcc_teensy/: main.py
hvcc_teensy/examples/crossover_f32/: Makefile  _main.pd  crossover_f32.ino
hvcc_teensy/examples/crossover_noise/: Makefile
hvcc_teensy/examples/crossover_noise_f32/: Makefile  _main.pd  crossover_noise_f32.ino
hvcc_teensy/examples/crossover_thru/: Makefile
hvcc_teensy/examples/sine_i2s/: _main.pd  sine_i2s.ino
hvcc_teensy/examples/sine_i2s_f32/: _main.pd  sine_i2s_f32.ino
hvcc_teensy/examples/sine_out/: Makefile  _main.pd  sine_out.ino
hvcc_teensy/examples/sine_out_f32/: Makefile  _main.pd  sine_out_f32.ino
hvcc_teensy/static/: HvAudioProcessor.hpp
hvcc_teensy/templates/: HeavyTeensy.h
static/: HvAudioProcessor.hpp
templates/: HeavyTeensy.h
